<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PollsActivity">
    <item
        android:id="@+id/menuSettings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuStatistics"
        android:orderInCategory="200"
        android:title="@string/action_statistics"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuQuit"
        android:orderInCategory="200"
        android:title="@string/action_quit"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuUser"
        android:orderInCategory="200"
        android:title="User"
        android:icon="@drawable/ic_user"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuSearch"
        android:orderInCategory="200"
        android:title="Search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

</menu>